2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #502826 (original patch by nickspoon0)

	* mail-config.glade:
	* em-composer-prefs.c: (attach_style_reply_new_order),
	(attach_style_info_reply), (em_composer_prefs_construct):
	Reword and reorder Reply Style items in the Preferences.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488175

	* message-list.c: (ml_tree_value_at):
	Colorize follow-up messages same as with due-by flag.

2008-03-25  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Added configurable Proxy settings for Evolution.

	* GNOME_Evolution_Mail.server.in.in:
	* Makefile.am:
	* em-network-prefs.c: (em_network_prefs_get_type),
	(em_network_prefs_class_init), (em_network_prefs_init),
	(em_network_prefs_finalise), (em_network_prefs_destroy),
	(toggle_button_toggled), (toggle_button_init), (emnp_widget_glade),
	(emnp_set_sensitiveness), (emnp_parse_ignore_hosts),
	(emnp_load_sys_settings), (notify_proxy_type_changed),
	(widget_entry_changed_cb), (emnp_free), (emnp_set_markups),
	(em_network_prefs_construct), (em_network_prefs_new):
	* em-network-prefs.h:
	* mail-component-factory.c: (factory):
	* mail-config-factory.c: (mail_config_control_factory_cb):
	* mail-config.glade:

2008-03-19  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #511978

	* mail-config.glade: Resolve mnemonics clash on Junk tab.

2008-03-19  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view.h:
	* em-message-browser.h:
	* em-message-browser.c:
	Code cleanup, no logic changes.

2008-03-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #519154

	* mail-component.c: (view_changed):
	Do not localize folder name used in window title.

2008-03-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #506359

	* mail-component.c: (mail_component_show_logger):
	Add Translators' comments.

2008-03-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #514744

	* em-folder-tree-model.c: (em_folder_tree_model_load_state):